# nyu-mlops-project

./: .dockerignore  .gitignore  Dockerfile  README.md  compare_runs.py  config.yaml  create_test_data.py  dataset.py  deploy_chameleon.sh  docker-compose.yaml  download_coco.sh  k8s.yaml  metrics.py  models.py  pyproject.toml  requirements.txt  run_experiments.sh  setup_remote.sh  train.py
configs/: baseline_mobilenet.yaml  demo_fast.yaml  resnet50_adam.yaml  resnet50_sgd.yaml
