[project]
name = "training"
version = "0.1.0"
description = "Multi-label image classification training pipeline (COCO 2017)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mlflow>=2.10.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pycocotools>=2.0.7",
]

[tool.uv]
dev-dependencies = [
    "numpy",
]
